update code 1/11/2025
update method update user + entity