@@ -7,15 +7,17 @@ import com.model_shared.models.student.StudentModel;
 import com.logging.services.LoggingService;
 import com.logging.models.LogContext;
 import com.handle_exceptions.NotFoundExceptionHandle;
-import com.handle_exceptions.ServiceUnavailableExceptionHandle;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.client.RestTemplate;
+
+import com.model_shared.models.user.UpdateEntityModel;
 import com.model_shared.models.user.UserDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.redis.core.RedisTemplate;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.stereotype.Service;
+import com.security_shared.services.SecurityService;
 import java.util.List;
 import java.util.Collections;
 import java.util.ArrayList;
@@ -38,6 +40,8 @@ public class StudentServiceImp implements StudentService {
     ObjectMapper objectMapper;
     @Autowired
     RestTemplate restTemplate;
+    @Autowired
+    SecurityService securityService;
     @Value("${security.base-url:http://localhost:8083}")
     private String securityBaseUrl;
 
@@ -49,6 +53,64 @@ public class StudentServiceImp implements StudentService {
                     .className(this.getClass().getSimpleName())
                     .methodName(methodName)
                     .build();
+    }
+
+    @Override
+    public List<StudentModel> gets() {
+        LogContext logContext = getLogContext("gets");
+
+        Object cached = redisTemplate.opsForValue().get(STUDENT_CACHE_KEY);
+        if (cached != null) {
+            loggingService.logInfo("Get data from Redis cache : " + STUDENT_CACHE_KEY, logContext);
+            @SuppressWarnings("unchecked")
+            List<StudentModel> cachedList = (List<StudentModel>) cached;
+            return cachedList;
+        }
+        loggingService.logWarn("Not found cache, Query DB", logContext);
+
+        List<StudentEntity> studentEntities = studentRepo.findAll();
+
+        if (studentEntities.isEmpty()) {
+            throw new NotFoundExceptionHandle("", Collections.emptyList(), "StudentModel");
+        }
+
+        // Collect all userIds
+        List<Integer> userIds = studentEntities.stream()
+                .map(StudentEntity::getUserId)
+                .distinct()
+                .toList();
+
+        // Get users from Security via SecurityService
+        Map<Integer, UserDto> usersById = securityService.getUsersByIds(userIds);
+
+        // Map to StudentModel with enriched user data
+        List<StudentModel> studentModels = new ArrayList<>();
+        for (StudentEntity studentEntity : studentEntities) {
+            UserDto userDto = usersById.get(studentEntity.getUserId());
+            
+            // Sync graduate to user.profileData
+            if (userDto != null) {
+                if (userDto.getProfileData() == null) {
+                    userDto.setProfileData(new HashMap<>());
+                }
+                userDto.getProfileData().put("graduate", studentEntity.getGraduate());
+            }
+            
+            StudentModel studentModel = new StudentModel();
+            studentModel.setId(studentEntity.getId());
+            studentModel.setUser(userDto);
+            
+            studentModels.add(studentModel);
+            loggingService.logStudentOperation("GET", studentEntity.getId(), logContext);
+        }
+
+        loggingService.logInfo("Gets Student Successfully", logContext);
+
+        redisTemplate.opsForValue()
+                .set(STUDENT_CACHE_KEY, studentModels);
+        loggingService.logInfo("Save cache to Redis : " + STUDENT_CACHE_KEY, logContext);
+
+        return studentModels;
     }
 
     @Override
@@ -84,145 +146,60 @@ public class StudentServiceImp implements StudentService {
     }
 
     @Override
-    public List<StudentModel> gets() {
-        LogContext logContext = getLogContext("gets");
+    @Transactional(rollbackFor = Exception.class)
+    public StudentModel update(UpdateEntityModel req) {
+        LogContext logContext = getLogContext("update");
 
-        Object cached = redisTemplate.opsForValue().get(STUDENT_CACHE_KEY);
-        if (cached != null) {
-            loggingService.logInfo("Get data from Redis cache : " + STUDENT_CACHE_KEY, logContext);
-            @SuppressWarnings("unchecked")
-            List<StudentModel> cachedList = (List<StudentModel>) cached;
-            return cachedList;
-        }
-        loggingService.logWarn("Not found cache, Query DB", logContext);
-
-        List<StudentEntity> studentEntities = studentRepo.findAll();
-
-        if (studentEntities.isEmpty()) {
-            throw new NotFoundExceptionHandle("", Collections.emptyList(), "StudentModel");
+        if (req == null || req.getId() == null) {
+            throw new NotFoundExceptionHandle("", List.of("Student ID is required"), "StudentModel");
         }
 
-        // Enrich with user data from Security
-        List<StudentModel> studentModels = loadStudentsWithUserData(studentEntities, logContext);
-        
-        loggingService.logInfo("Gets Student Successfully", logContext);
+        if (req.getUser() == null || req.getUser().getUserId() == null) {
+            throw new NotFoundExceptionHandle("", List.of("User data is required"), "StudentModel");
+        }
 
-        redisTemplate.opsForValue()
-                .set(STUDENT_CACHE_KEY, studentModels);
-        loggingService.logInfo("Save cache to Redis : " + STUDENT_CACHE_KEY, logContext);
+        // 1. Find StudentEntity by id
+        StudentEntity studentEntity = studentRepo.findById(req.getId())
+                .orElseThrow(() -> new NotFoundExceptionHandle("", 
+                    List.of(String.valueOf(req.getId())), "StudentModel"));
 
-        return studentModels;
+        // 2. Verify userId matches (security check)
+        if (!studentEntity.getUserId().equals(req.getUser().getUserId())) {
+            throw new NotFoundExceptionHandle("", 
+                List.of("User ID mismatch with Student"), "StudentModel");
+        }
+
+        UserDto updatedUser = securityService.updateUser(req.getUser());
+        loggingService.logInfo("Updated user data for userId: " + updatedUser.getUserId(), logContext);
+
+        // 4. Update StudentEntity (graduate field)
+        if (req.getUser().getProfileData() != null && 
+            req.getUser().getProfileData().containsKey("graduate")) {
+            Boolean graduate = (Boolean) req.getUser().getProfileData().get("graduate");
+            studentEntity.setGraduate(graduate);
+            studentRepo.save(studentEntity);
+            loggingService.logInfo("Updated graduate status for student id: " + studentEntity.getId(), logContext);
+        }
+
+        // 5. Sync graduate to updatedUser.profileData
+        if (updatedUser.getProfileData() == null) {
+            updatedUser.setProfileData(new HashMap<>());
+        }
+        updatedUser.getProfileData().put("graduate", studentEntity.getGraduate());
+
+        // 6. Build and return updated StudentModel
+        StudentModel updatedStudentModel = new StudentModel();
+        updatedStudentModel.setId(req.getId());
+        updatedStudentModel.setUser(updatedUser);
+
+        loggingService.logStudentOperation("UPDATE", req.getId(), logContext);
+        loggingService.logInfo("Update Student Successfully", logContext);
+
+        redisTemplate.delete(STUDENT_CACHE_KEY);
+        loggingService.logInfo("Del cache key: " + STUDENT_CACHE_KEY + " after update students", logContext);
+
+        return updatedStudentModel;
     }
-
-    private List<StudentModel> loadStudentsWithUserData(List<StudentEntity> studentEntities, LogContext logContext) {
-        try {
-            // Collect all userIds
-            List<Integer> userIds = studentEntities.stream()
-                    .map(StudentEntity::getUserId)
-                    .distinct()
-                    .toList();
-
-            // Call Security batch endpoint (internal API trả về List trực tiếp để tối ưu)
-            Map<String, Object> requestBody = new HashMap<>();
-            requestBody.put("ids", userIds);
-
-            @SuppressWarnings("unchecked")
-            List<Object> dataFromUsers = restTemplate.postForObject(
-                    securityBaseUrl + "/auth/internal/users/batch",
-                    requestBody,
-                    List.class
-            );
-
-            Map<Integer, UserDto> usersById = new HashMap<>();
-            if (dataFromUsers != null) {
-                for (Object obj : dataFromUsers) {
-                    // Convert LinkedHashMap sang UserDto
-                    UserDto user = objectMapper.convertValue(obj, UserDto.class);
-                    usersById.put(user.getUserId(), user);
-                }
-            }
-
-            // Map to StudentModel with enriched user data
-            List<StudentModel> studentModels = new ArrayList<>();
-            for (StudentEntity studentEntity : studentEntities) {
-                UserDto userDto = usersById.get(studentEntity.getUserId());
-                
-                // Sync graduate to user.profileData
-                if (userDto != null) {
-                    if (userDto.getProfileData() == null) {
-                        userDto.setProfileData(new HashMap<>());
-                    }
-                    userDto.getProfileData().put("graduate", studentEntity.getGraduate());
-                }
-                
-                StudentModel studentModel = new StudentModel();
-                studentModel.setId(studentEntity.getId());
-                studentModel.setUser(userDto);
-                
-                studentModels.add(studentModel);
-                loggingService.logStudentOperation("GET", studentEntity.getId(), logContext);
-            }
-
-            return studentModels;
-        } catch (Exception e) {
-            loggingService.logError("Failed to enrich student data with user info from Security service", e, logContext);
-            throw new ServiceUnavailableExceptionHandle(
-                "Cannot retrieve user information from Security service",
-                "Security service may be down or experiencing issues. Please try again later.",
-                "Security"
-            );
-        }
-    }
-
-    // @Override
-    // public List<StudentEntity> creates(List<CreateStudentModel> studentModels) {
-    //     LogContext logContext = getLogContext("creates");
-
-    //     List<StudentEntity> studentEntities = new ArrayList<>();
-    //     for (CreateStudentModel studentModel : studentModels) {
-    //         StudentEntity studentEntity = modelMapper.map(studentModel, StudentEntity.class);
-    //         studentEntities.add(studentEntity);
-    //         loggingService.logStudentOperation("CREATE", studentEntity.getId(), logContext);
-    //     }
-    //     studentRepo.saveAll(studentEntities);
-        
-    //     loggingService.logInfo("Create Students Successfully", logContext);
-
-    //     redisTemplate.delete(STUDENT_CACHE_KEY);
-    //     loggingService.logInfo("Del cache key: " + STUDENT_CACHE_KEY + " after create students", logContext);
-
-    //     return studentEntities;
-    // }
-
-    // @Override
-    // public List<StudentEntity> updates(List<StudentModel> studentModels) {
-    //     LogContext logContext = getLogContext("updates");
-
-    //     List<StudentEntity> studentEntities = new ArrayList<>();
-    //     List<String> listIDNotFound = new ArrayList<>();
-    //     for (StudentModel studentModel : studentModels) {
-    //         StudentEntity studentEntity = modelMapper.map(studentModel, StudentEntity.class);
-    //         if (studentRepo.findById(studentModel.getId()).isPresent()) {
-    //             studentEntities.add(studentEntity);
-    //             loggingService.logStudentOperation("UPDATE", studentModel.getId(), logContext);
-    //         } else {
-    //             listIDNotFound.add(String.valueOf(studentEntity.getId()));
-    //         }
-    //     }
-
-    //     if (!listIDNotFound.isEmpty()) {
-    //         loggingService.logError("Found IDs not exist: " + listIDNotFound, null, logContext);
-    //         throw new NotFoundExceptionHandle("", listIDNotFound, "StudentModel");
-    //     }
-
-    //     studentRepo.saveAll(studentEntities);
-    //     loggingService.logInfo("Update Students Successfully", logContext);
-
-    //     redisTemplate.delete(STUDENT_CACHE_KEY);
-    //     loggingService.logInfo("Del cache key: " + STUDENT_CACHE_KEY + " after update students", logContext);
-
-    //     return studentEntities;
-    // }
 
     // @Override
     // public Boolean deletes(List<StudentModel> StudentModels) {
